--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: front
       dockerfile: Dockerfile
+      no_cache: true
     ports:
       - "4200:4200"
   backend:
@@ -12,6 +13,7 @@ services:
     build:
       context: backend
       dockerfile: Dockerfile
+      no_cache: true
     ports:
       - "3000:3000"
   database:
